--- a/idc-servicio-mensajero-rc.properties
+++ b/idc-servicio-mensajero-rc.properties
@@ -1,5 +1,16 @@
+# url base del micro-servicio de eureka 
+eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+
+# url base del servidor zipkin para registro de trazas
+spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
+
+# probabilidad del registro de trazas sleuth (1 imprime todo)
+spring.sleuth.sampler.probability=1.0
+
+logging.level.org.hibernate.SQL=debug
+
 #RabbitMQ
-spring.rabbitmq.host=azure-docker-idc-msrc.eastus.cloudapp.azure.com
+spring.rabbitmq.host=azure-docker-idc-msqa.eastus.cloudapp.azure.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
