--- a/idc-servicio-divipol-rc.properties
+++ b/idc-servicio-divipol-rc.properties
@@ -1,17 +1,17 @@
-# idc-servicio-divipol-accept.properties
+# idc-servicio-divipol-dev.properties
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
-
+eureka.instance.preferIpAddress = true
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql11_idc_divipol:5432/db_idc_divipol
-spring.datasource.username=idc-divipol-admin
-spring.datasource.password=Carvajal2019*
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_divipol_rc
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
@@ -27,3 +27,4 @@ api.version=1.0
 swagger.enabled=true
 swagger.title=idc-servicio-divipol API
 swagger.description=API Microservicio de Division Politica
+
