--- a/idc-servicio-usuarios-rc.properties
+++ b/idc-servicio-usuarios-rc.properties
@@ -1,17 +1,20 @@
-# idc-servicio-usuarios-accept.properties
+# idc-servicio-usuarios-dev.properties
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_usuarios:3306/db_idc_usuarios?user=idc-usuarios-admin&password=Carvajal2019*&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_usuarios_rc
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
 feign.url=http://idc-servicio-zuul-server:8090/api
+
