--- a/idc-servicio-cierre-rc.properties
+++ b/idc-servicio-cierre-rc.properties
@@ -9,21 +9,21 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://sqlServer_idc_estacione:1433;databaseName=db_idc_estaciones
-spring.datasource.username=sa
-spring.datasource.password=Carvajal2019*
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_estaciones_rc
+spring.datasource.username=administrador
+spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
-hibernate.hbm2ddl.auto=update
+
 
 
 logging.level.org.hibernate.SQL=debug
 
 
-spring.second-datasource.url = jdbc:sqlserver://sqlServer_idc_estacione:1433;databaseName=db_idc_configcierres
-spring.second-datasource.username = sa
-spring.second-datasource.password = Carvajal2019*
+spring.second-datasource.url = jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_configcierres_rc
+spring.second-datasource.username = administrador
+spring.second-datasource.password = Carvajal2020*
 spring.second-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
