--- a/idc-servicio-inscripcioncancel-k8s-dev.properties
+++ b/idc-servicio-inscripcioncancel-k8s-dev.properties
@@ -2,6 +2,7 @@
 
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
+eureka.instance.preferIpAddress = true
 
 
 # url base del servidor zipkin para registro de trazas
