--- a/application.properties
+++ b/application.properties
@@ -7,3 +7,6 @@ config.security.oauth.client.secret=Carvajal2019*
 
 # jwt key - generacion token
 config.securityw.oauth.jwt.key=carvaja_idc_secret_key_2020_
+
+feign.email.url = http://sms.com.co;
+feign.sms.url = http://sms.com.co;
