--- a/application.properties
+++ b/application.properties
@@ -8,5 +8,5 @@ config.security.oauth.client.secret=Carvajal2019*
 # jwt key - generacion token
 config.securityw.oauth.jwt.key=carvaja_idc_secret_key_2020_
 
-feign.email.url = http://sms.com.co;
-feign.sms.url = http://sms.com.co;
+feign.sms.url=https://sms.masivapp.com/smsv3/sms/messages
+feign.email.url=https://api.masiv.masivian.com/email/v1/delivery
