Inclusión de Cola en InData

--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -35,6 +35,7 @@ idc.rabbitmq.cupoqueue=idc.cupo_queue
 idc.rabbitmq.rangoformularioqueue=idc.rangoformulario_queue
 idc.rabbitmq.eliminardetalleremisionqueue=idc.eliminardetalleremision_queue
 idc.rabbitmq.aprobacionimagenesqueue=idc.aprobacionimagenes_queue
+idc.rabbitmq.matrizformulariosqueue=idc.matrizformularios_queue
 
 #Conexion SQL Server
 spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
